--- a/Distribuicao.Lucros.Api/Distribuicao.Lucros.Api.csproj
+++ b/Distribuicao.Lucros.Api/Distribuicao.Lucros.Api.csproj
@@ -4,5 +4,9 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
-
+	<ItemGroup>
+		<PackageReference Include="NSwag.AspNetCore" Version="13.1.5" />
+		<PackageReference Include="NSwag.Core" Version="13.1.5" />
+		<PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.0.0" />
+	</ItemGroup>
 </Project>
