--- a/Distribuicao.Lucros.Service/Distribuicao.Lucros.Service.csproj
+++ b/Distribuicao.Lucros.Service/Distribuicao.Lucros.Service.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Distribuicao.Lucros.Domain\Distribuicao.Lucros.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
