feat: Obter funcionários do banco de dados e injeções de dependencias

--- a/Distribuicao.Lucros.Api/appsettings.json
+++ b/Distribuicao.Lucros.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "MYSQL_CONNECTION": "Data Source=192.185.216.227;Initial Catalog=tatia971_teste; User ID=tatia971_teste;Password=Lvnrv^w=ObRW; Connection Timeout=30;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
